--- a/config/navigation.yaml
+++ b/config/navigation.yaml
@@ -1,4 +1,5 @@
-# Based on humble turtlebot3_navigation2/param/burger.yaml
+# Based on
+# https://github.com/ROBOTIS-GIT/turtlebot3/blob/humble-devel/turtlebot3_navigation2/param/burger.yaml
 amcl:
   ros__parameters:
     use_sim_time: False
