--- a/config/navigation.yaml
+++ b/config/navigation.yaml
@@ -182,21 +182,23 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.0625
-      plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
+#      plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
+      plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 1.0
         cost_scaling_factor: 3.0
-      obstacle_layer:
-        plugin: "nav2_costmap_2d::ObstacleLayer"
-        enabled: True
-        observation_sources: scan
-        scan:
-          topic: /scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
+#        inflation_radius: 1.0
+        inflation_radius: 0.55
+#      obstacle_layer:
+#        plugin: "nav2_costmap_2d::ObstacleLayer"
+#        enabled: True
+#        observation_sources: scan
+#        scan:
+#          topic: /scan
+#          max_obstacle_height: 2.0
+#          clearing: True
+#          marking: True
+#          data_type: "LaserScan"
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -220,9 +222,11 @@ local_costmap:
       static_layer:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
+
   local_costmap_client:
     ros__parameters:
       use_sim_time: False
+
   local_costmap_rclcpp_node:
     ros__parameters:
       use_sim_time: False
